--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -72,21 +72,21 @@
             {% block head_title %}{% endblock %}
             {% if show_tabs %}
                 <!-- Top Navigation Tabs -->
-                <div class="tab-container">
+                <div class="tab-container"> 
                     <div class="second-nav">
-                        {% if self.announce_section %}
+                        {% if show_announce_section %}
                             <a href="#announce" class="tab-link active" data-section="announceSection">
                                 <i class="fas fa-envelope"></i>
                                 <span>Notification</span>
                             </a>
                         {% endif %}
-                        {% if self.upload_section %}
+                        {% if show_upload_section %}
                             <a href="#upload" class="tab-link" data-section="uploadSection">
                                 <i class="fas fa-upload"></i>
                                 <span>Upload File</span>
                             </a>
                         {% endif %}
-                        {% if self.manual_section %}
+                        {% if show_manual_section %}
                             <a href="#manual" class="tab-link" data-section="manualSection">
                                 <i class="fas fa-plus"></i>
                                 <span>Manually Insert</span>
@@ -110,17 +110,16 @@
                 <br>
 
                 <!-- Tab Content Sections -->
-                {% if self.announce_section %}
+                {% if show_announce_section %}
                     {% block announce_section %}{% endblock %}
                 {% endif %}
-                {% if self.upload_section %}
+                {% if show_upload_section %}
                     {% block upload_section %}{% endblock %}
                 {% endif %}
-                {% if self.manual_section %}
+                {% if show_manual_section %}
                     {% block manual_section %}{% endblock %}
                 {% endif %}
-            {% endif %}
-            <br>
+            <br>    
 
             <!-- Main Page-Specific Content -->
             {% block content %}{% endblock %}
